--- a/src/main/front/index.html
+++ b/src/main/front/index.html
@@ -1,10 +1,57 @@
 <!DOCTYPE html>
 <html lang ="en">
 <head>
+	<meta charset="UTF-8">
+	<link rel="stylesheet" type="text/css" href="style.css"> 
+	<script src="https://use.fontawesome.com/7e513ac34f.js"></script>
 	<script src=
 	"https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"
 	type="text/javascript"></script>
 	<script type="text/javascript" src="app.js"></script>
 </head>
+
+<body>
+	<section class="banner">
+		<img id="banner_image" src="images/banner.jpg">	
+		<div class="banner_description">
+			<h1 id="banner_title">LoCal</h1>
+			<p id ="banner_description">Description goes here.</p>
+			<div class="links">
+				<p id="account"><i class="fa fa-user" aria-hidden="true"></i>My Account</p>
+				<p id="preferences"><i class="fa fa-cog" aria-hidden="true">Preferences</i></p>
+			</div>
+		</div>
+	</section>
+
+	<section class="list">
+		<h2 id="list_header">Today's List</h2>
+		<form id="list_form">
+			<input type="checkbox" name="item" value="cabbage" class="item">Cabbage</li>
+			<br>
+			<input type="checkbox" name="item" value="pepper" class="item">Pepper</li>
+			<br>
+			<input type="checkbox" name="item" value="leeks" class="item">Leeks</li>
+			<br>
+			<input type="checkbox" name="item" value="dirt" class="item">Dirt</li>
+			<br>
+			<input type="checkbox" name="item" value="Mushroom" class="item">Mushroom</li>
+		</form>
+	</section>
+
+	<section class="details">
+		<h2>This is another header</h2>
+	</section>
+
+	<section>
+		<h2> Events in your Area</h2>
+		<article>
+			<h3>
+		</article>
+	</section>
+
+	<section>
+		<h2> Other Locations you may be Interested in
+	</section>
+</body>
 
 </html>
