--- a/src/main/front/settings.html
+++ b/src/main/front/settings.html
@@ -3,16 +3,38 @@
 <head>
 	<meta charset="UTF-8">
 	<script src="https://use.fontawesome.com/7e513ac34f.js"></script>
+	<link rel="stylesheet" type="text/css" href="style.css"> 
 </head>
 
 <body>
-	<section>
-		<p>
-			hi
-			<i class="fa fa-cog" aria-hidden="true"></i>
-			<i class="fa fa-user" aria-hidden="true"></i>
+	<section id="preferences_banner">
+		<h1 id="preferences_header"><i class="fa fa-cog" aria-hidden="true"></i>Preferences</h1>
+		<img src="images/preferences.jpeg" alt="tomatoe bunch" id="preferences_image">
+	</section>
 
-		</p>
+	<div id="green_separator"></div>
+
+	<section class="content" id="prefered_locations">
+		<h2 class="second_h">Prefered Locations</h2>
+		<p class="text_style">Distribute 100% between the locations listed to signify how much of your produce should ideally come from each location.</p>
+		<p class="text_style">Ex. A location with 50% preference would provide 50% of the recommended produce.</p>
+		<div class="white_content">
+			<ul>
+				<li class="text_style">Martin's Family Fruit (25%)&nbsp;</li>
+				<br>
+				<li class="text_style">Snyder's Farm (25%)&nbsp;</li>
+				<br>
+				<li class="text_style">St. Jacob's Market (50%)&nbsp;</li>
+			</ul>
+			<i class="fa fa-pencil" aria-hidden="true"></i>
+		</div>
+
+	</section>
+
+	<div id="green_separator"></div>
+
+	<section class="content" id="prefered_foods">
+		<h2 class="second_h">Prefered Foods </h2>
 	</section>
 
 </body>
