--- a/src/main/front/index.html
+++ b/src/main/front/index.html
@@ -73,17 +73,6 @@
 					<br>
 					<input type="checkbox" name="item" class="item">Mushroom ($3.99)
 				</form>
-				<p id="math">
-				<i class="fa fa-plus-square-o math" aria-hidden="true"></i><i class="fa fa-minus-square-o" aria-hidden="true"></i>
-				<br>
-				<i class="fa fa-plus-square-o math" aria-hidden="true"></i><i class="fa fa-minus-square-o" aria-hidden="true"></i>
-				<br>
-				<i class="fa fa-plus-square-o math" aria-hidden="true"></i><i class="fa fa-minus-square-o" aria-hidden="true"></i>
-				<br>
-				<i class="fa fa-plus-square-o math" aria-hidden="true"></i><i class="fa fa-minus-square-o" aria-hidden="true"></i>
-				<br>
-				<i class="fa fa-plus-square-o math" aria-hidden="true"></i><i class="fa fa-minus-square-o" aria-hidden="true"></i>
-				</p>
 			</div>
 		</article>
 
@@ -97,10 +86,12 @@
 					<input type="checkbox" name="item" class="item">Dirt (5)
 					<input type="checkbox" name="item" class="item">Mushroom (7)
 				</form>
-				<p id="total">Total: $900.00</p>
-				<form id="form_produce">					
-					<input type="submit" value="Checkout" id="submit_order">
-				</form>
+				<div id="checkout">
+					<p id="total">Total: $900.00</p>
+					<form id="form_produce">					
+						<input type="submit" value="Checkout" id="submit_order">
+					</form>
+				<div>
 			</div>
 		</article>
 	</section>
