--- a/src/main/front/settings.html
+++ b/src/main/front/settings.html
@@ -35,6 +35,51 @@
 
 	<section class="content" id="prefered_foods">
 		<h2 class="second_h">Prefered Foods </h2>
+		<p class="text_style"> Put a number from 0-5 to indicate how many times a week you would like the product to be delivered</p>
+		<div>
+			<table class="white_content text_style" id="prefered_food">
+				<tr>
+					<th>Vegetables</th>
+					<th>Fruit</th>
+					<th>Grains</th>
+					<th>Meat</th>
+					<th>Dairy</th>
+				</tr>
+				<tr>
+					<td>
+						<ul>
+							<li>Red Pepper (5)</li>
+							<li>Celery (0)</li>
+						</ul>
+					</td>
+					<td>
+						<ul>
+							<li>Straberries (3)</li>
+							<li>Blueberries (2)</li>
+						</ul>
+					</td>
+					<td>
+						<ul>
+							<li>Buckwheat (5)</li>
+							<li>Barley (1)</li>
+						</ul>
+					</td>
+					<td>
+						<ul>
+							<li>Beef (5)</li>
+							<li>Chicken (3)</li>
+						</ul>
+					</td>
+					<td>
+						<ul>
+							<li>Eggs (1)</li>
+							<li>Milk (2)</li>
+						</ul>
+					</td>
+				</tr>
+			</table>
+		</div>
+		<i class="fa fa-pencil" aria-hidden="true" id="food_edit"></i>
 	</section>
 
 </body>
