--- a/src/main/front/index.html
+++ b/src/main/front/index.html
@@ -17,8 +17,8 @@
 			<h1 id="banner_title">LoCal</h1>
 			<p id ="banner_description">Green, Local & LowCal</p>
 			<div class="links">
-				<a id="account" href="#"><i class="fa fa-user" aria-hidden="true"></i>My Account</a>
-				<a id="preferences" href="#"><i class="fa fa-cog" aria-hidden="true"></i>Preferences</a>
+				<a id="account" href="account.html"><i class="fa fa-user" aria-hidden="true"></i>My Account</a>
+				<a id="preferences" href="settings.html"><i class="fa fa-cog" aria-hidden="true"></i>Preferences</a>
 			</div>
 		</div>
 	</section>
@@ -57,7 +57,7 @@
 			</div>
 
 			<div class="right_bar">
-				<h3 class="third_h" id="provider">Products from Location Name Currently Selected From Map</h3>
+				<h3 class="third_h" id="provider">Products from Location Name</h3>
 				<p id="produce_instructions">Please select the items you want added to your shopping cart</p>
 				<form id="list_form">
 					<input type="checkbox" name="item" class="item">Cabbage ($3.99) 
