--- a/src/main/front/index.html
+++ b/src/main/front/index.html
@@ -60,18 +60,18 @@
 				<h3 class="third_h" id="provider">Products from Location Name</h3>
 				<p id="produce_instructions">Please select the items you want added to your shopping cart</p>
 				<form id="list_form">
-					<input type="checkbox" name="item" class="item">Cabbage ($3.99) 
+					<input type="checkbox" name="item" class="item">Cabbage
 					<br>
-					<input type="checkbox" name="item" class="item">Pepper ($3.99)
+					<input type="checkbox" name="item" class="item">Pepper
 
 					<br>
-					<input type="checkbox" name="item" class="item">Leeks ($3.99)
+					<input type="checkbox" name="item" class="item">Leeks
 
 					<br>
-					<input type="checkbox" name="item" class="item">Dirt ($3.99)
+					<input type="checkbox" name="item" class="item">Dirt
 
 					<br>
-					<input type="checkbox" name="item" class="item">Mushroom ($3.99)
+					<input type="checkbox" name="item" class="item">Mushroom
 				</form>
 			</div>
 		</article>
@@ -87,7 +87,6 @@
 					<input type="checkbox" name="item" class="item">Mushroom (7)
 				</form>
 				<div id="checkout">
-					<p id="total">Total: $900.00</p>
 					<form id="form_produce">					
 						<input type="submit" value="Checkout" id="submit_order">
 					</form>
