--- a/src/main/front/account.html
+++ b/src/main/front/account.html
@@ -16,15 +16,40 @@
 
 	<section>
 		<div class="content">
-		<h1 class="second_h">My Information</h1>
-		<p class="text_style white_content">Age: 34 <br> Weight: 125lbs <br> Height: 5' 3"</p>
+			<h2 class="second_h">My Information</h2>
+			<div class=" white_content">
+				<div id="left_info">
+				<h3 class="third_h">General</h3>
+				<p class="text_style">Age: 34 <br> Weight: 125lbs <br> Height: 5' 3"</p>
+				</div>
+				<div id="right_info">
+					<h3 class="third_h">Spendings</h3>
+					<p class="text_style">Total Spendings: $976.00</p>
+					<a href="#" class="text_style">Download Report</a> 
+				</div>
+				<i class="fa fa-pencil" aria-hidden="true" id="edit_info"></i>
+			</div>
+		</div>
+	</section>
+
+	<div id="green_separator"></div>
+
+	<section class="content">
+		<h2 class="second_h">My Dietary Progress</h2>
+		<div class="white_content">
+			<p class="text_style">The information provided below shows the percentage of each food group bought and shows you how to change your diet for a more balanced lifestyle </p>
+			<img src="images/foodPyramid.jpg" alt="food pyramid" id="food_pyramid">
 		</div>
 	</section>
 
 	<section>
-		<img src="photos/dairy.jpg" alt="dairy products">
-		<img src="photos/grains.jpg" alt= "grain products">
+		<img src="images/dairy.jpg" alt="dairy products" class="stat">
+		<img src="images/grains.jpg" alt= "grain products" class="stat">
+		<img src="images/meat.jpg" alt="meat products" class="stat">
+		<img src="images/vegetables.jpg" alt="vegetable products" class="stat">
+		<img src="images/fruits.jpg" alt="fruit products" class="stat">
 	</section>
+
 
 </body>
 
