--- a/src/main/front/account.html
+++ b/src/main/front/account.html
@@ -10,6 +10,7 @@
 	<section id="account_header">
 		<h1 class="text_style" id="account_header"><i class="fa fa-user" aria-hidden="true"></i>My Account</h1>
 		<img src="images/account.jpg" alt="carrot bunch" id="account_banner">
+		<a href="index.html"><i class="fa fa-home" aria-hidden="true"></i></a>
 	</section>
 
 	<div id="green_separator"></div>
