--- a/src/main/front/settings.html
+++ b/src/main/front/settings.html
@@ -10,6 +10,7 @@
 	<section id="preferences_banner">
 		<h1 id="preferences_header"><i class="fa fa-cog" aria-hidden="true"></i>Preferences</h1>
 		<img src="images/preferences.jpeg" alt="tomatoe bunch" id="preferences_image">
+		<a href="index.html"><i class="fa fa-home" aria-hidden="true"></i></a>
 	</section>
 
 	<div id="green_separator"></div>
