--- a/src/main/front/settings.html
+++ b/src/main/front/settings.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+<div class="fixed">
 	<section id="preferences_banner">
 		<h1 id="preferences_header"><i class="fa fa-cog" aria-hidden="true"></i>Preferences</h1>
 		<img src="images/preferences.jpeg" alt="tomatoe bunch" id="preferences_image">
@@ -83,5 +84,17 @@
 		<i class="fa fa-pencil" aria-hidden="true" id="food_edit"></i>
 	</section>
 
+	<div id="green_separator"></div>
+
+	<section class="content">
+		<h2 class="second_h">Other Preferences</h2>
+		<ul class="text_style white_content">
+			<li>Gluten Free</li>
+			<li>Product price under $20</li>
+			<li>Organic</li>
+		</ul>
+		<i class="fa fa-pencil" aria-hidden="true" id="other_edit"></i>
+	</section>
+</div>
 </body>
 </html>
