--- a/src/main/front/account.html
+++ b/src/main/front/account.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+	<div class="fixed">
 	<section id="account_header">
 		<h1 class="text_style" id="account_header"><i class="fa fa-user" aria-hidden="true"></i>My Account</h1>
 		<img src="images/account.jpg" alt="carrot bunch" id="account_banner">
@@ -51,7 +52,7 @@
 		<img src="images/fruits.jpg" alt="fruit products" class="stat">
 	</section>
 
-
+</div>
 </body>
 
 </html>
