--- a/src/main/front/index.html
+++ b/src/main/front/index.html
@@ -95,9 +95,9 @@
 				</form>	
 				<h3 class="third_h" id="ingredient_selection">Select your Preferences</h3>
 				<form id="recipe_preferences" class= "text_style">
-					<input type="checkbox" name="item" class="item">Gluten Free
-					<input type="checkbox" name="item" class="item">Shellfish Free
-					<input type="checkbox" name="item" class="item">Dairy Free
+					<input type="checkbox" name="item" class="item" id="gluten_free">Gluten Free
+					<input type="checkbox" name="item" class="item" id="shellfish_free">Shellfish Free
+					<input type="checkbox" name="item" class="item" id="dairy_free">Dairy Free
 				</form>
 				<h3 class="third_h" id="ingredient_selection">Select your Ingredients</h3>
 				<form id="recipe_ingredients">
