--- a/src/main/front/settings.html
+++ b/src/main/front/settings.html
@@ -17,7 +17,7 @@
 	<div id="green_separator"></div>
 
 	<section class="content" id="prefered_locations">
-		<h2 class="second_h">Prefered Locations</h2>
+		<h2 class="second_h">Preferred Locations</h2>
 		<p class="text_style">Distribute 100% between the locations listed to signify how much of your produce should ideally come from each location.</p>
 		<p class="text_style">Ex. A location with 50% preference would provide 50% of the recommended produce.</p>
 		<div class="white_content">
@@ -36,7 +36,7 @@
 	<div id="green_separator"></div>
 
 	<section class="content" id="prefered_foods">
-		<h2 class="second_h">Prefered Foods </h2>
+		<h2 class="second_h">Preferred Foods </h2>
 		<p class="text_style"> Put a number from 0-5 to indicate how many times a week you would like the product to be delivered</p>
 		<div>
 			<table class="white_content text_style" id="prefered_food">
